# 2017-2018-TokenSorter

./: .gitignore  CMakeLists.txt
color-sensor-test/: jno.jno
color-sensor-test/libraries/ColorSensor/: ColorSensor.cpp  ColorSensor.h
color-sensor-test/sketch/: sketch.ino
competition-code/: jno.jno
competition-code/libraries/Arm/: Arm.cpp  Arm.h
competition-code/libraries/Buttons/: Buttons.cpp  Buttons.h  StartButton.cpp
competition-code/libraries/ColorSensor/: ColorSensor.h
competition-code/libraries/LineIntersection/: LineIntersection.cpp  LineIntersection.h
competition-code/libraries/Movement/: Movement.cpp  Movement.h  MovementMock.cpp
competition-code/libraries/Navigation/: Gameboard.cpp  Gameboard.h  Intersection.cpp  Intersection.h  Navigation.cpp  Navigation.h  Navigation17.cpp
competition-code/libraries/PID/: PID.cpp  PID.h
competition-code/libraries/RoundSwitch/: RoundSwitch.h
competition-code/libraries/ScrapController/: ScrapController.h  ScrapDualController.cpp  ScrapMotorControl.cpp  ScrapMotorSinglePin.cpp
competition-code/libraries/SparkFun_Line_Follower_Array_Arduino_Library/examples/AveragingReadBarOnly/: AveragingReadBarOnly.ino
competition-code/sketch/: sketch.ino
general-button-test/sketch/: sketch.ino
line-array-test/: readme.txt
line-array-test/libraries/: LineIntersection.cpp
line-array-test/libraries/LineIntersection/: LineIntersection.cpp  LineIntersection.h
line-array-test/libraries/SparkFun_Line_Follower_Array_Arduino_Library/examples/AveragingReadBarOnly/libraries/src/: sensorbar.cpp
line-array-test/libraries/SparkFun_Line_Follower_Array_Arduino_Library/examples/AveragingReadBarOnly/sketch/: sketch.ino
line-array-test/sketch/: sketch.ino
middle-line-test/: jno.jno
middle-line-test/sketch/: sketch.ino
motor-test/libraries/ScrapController/: ScrapController.h  ScrapMotorControl.cpp  ScrapMotorSinglePin.cpp
motor-test/sketch/: sketch.ino
movement-test/: jno.jno
movement-test/libraries/LineIntersection/: LineIntersection.h
movement-test/libraries/Movement/: Movement.cpp  Movement.h
movement-test/libraries/SparkFun_Line_Follower_Array_Arduino_Library/examples/AveragingReadBarOnly/libraries/src/: sensorbar.h  sx1509_registers.h
movement-test/libraries/SparkFun_Line_Follower_Array_Arduino_Library/examples/AveragingReadBarOnly/sketch/: sketch.ino
movement-test/sketch/: sketch.ino
navigation-test/: nav_pc_test.cpp
navigation-test/lib/Movement/: Movement.cpp  Movement.h
navigation-test/lib/Navigation/: Gameboard.cpp  Intersection.cpp  IntersectionState.cpp  IntersectionState.h  Navigation.cpp  Navigation.h
navigation-test/libraries/: Arduino.h
navigation-test/libraries/Movement/: Movement.h
navigation-test/libraries/Navigation/: Coordinate.h  Gameboard.h  Intersection.cpp  Intersection.h  IntersectionState.cpp  Navigation.cpp  Navigation17.cpp  Navigation17.h
navigation-test/libraries/ScrapController/: ScrapController.h  ScrapMotorControl.cpp
navigation-test/sketch/: sketch.ino
round-switches-test/libraries/RoundSwitch/: RoundSwitch.cpp
round-switches-test/sketch/: sketch.ino
